# ansible-role-nginx

./: .editorconfig  .gitignore  CHANGELOG  Makefile  README.txt  conf.py  docs.rst  pyproject.toml
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
molecule/default/: Dockerfile.j2  converge.yml  molecule.yml  playbook.yml  prepare.yml  verify.sh  verify.yml
molecule/default/tests/: test_default.py
tasks/: main.yml
templates/: nginx.conf  nginx.j2  vhost.j2
