[tool.poetry]
name = "ansible-role-nginx"
version = "0.0.1"
description = "Ansible role to setup Nginx"
authors = ["Jakub Pieńkowski <jakub+ansible-role-nginx@jakski.name>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
Sphinx = "^3.5.2"
ansible = "~2.10"
mitogen = { git = "https://github.com/dw/mitogen.git", branch = "v0.3.0-rc.0" }
sphinxcontrib-autoyaml = "^0.6.0"
molecule = {extras = ["podman"], version = "^3.2.3"}
ansible-lint = {extras = ["yamllint"], version = "^5.0.3"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
